--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 project(FastHNF)
-
 set(CMAKE_CXX_STANDARD 14)
 
 
-add_executable(FastHNF main.cpp Matrix.cpp)
+add_executable(FastHNF main.cpp Matrix.cpp SimplicialComplex.cpp Simplex.cpp)
