--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.21)
 project(FastHNF)
 set(CMAKE_CXX_STANDARD 14)
 
-
-add_executable(FastHNF main.cpp Matrix.cpp SimplicialComplex.cpp Simplex.cpp)
+include_directories(include)
+add_executable(FastHNF src/main.cpp src/Matrix.cpp src/SimplicialComplex.cpp src/Simplex.cpp)
